force-app/main/default/objects/Vehicle__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for designating #TheAudiArmy Vehicle Car Part Brand</description>
    <inlineHelpText>Please select which Brand this #TheAudiArmy Vehicle Car Part is from.</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>