force-app/main/default/objects/Vehicle__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates #TheAudiArmy Vehicle Car Part Records to the Vehicle Car Records.</description>
    <inlineHelpText>Please enter which Car this Car Part goes on.</inlineHelpText>
    <label>Car</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>