force-app/main/default/objects/Vehicle__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>This field is for designating #TheAudiArmy Vehicle Car Color.</description>
    <inlineHelpText>Please enter the Color for this #TheAudiArmy Vehicle Car Record.</inlineHelpText>
    <label>Color</label>
    <length>69</length>
    <required>true</required>
    <type>Text</type>
</CustomField>