force-app/main/default/objects/Vehicle__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field is for describing this #TheAudiArmy Vehicle Car / Part.</description>
    <inlineHelpText>Please describe this #TheAudiArmy Car / Part</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>