force-app/main/default/objects/Vehicle__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates #TheAudiArmy Vehicle Car Records to the Contact Driver Records</description>
    <inlineHelpText>Please enter the Driver this Car belongs to.</inlineHelpText>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>