force-app/main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>This field is for designating #TheAudiArmy Vehicle Car Make.</description>
    <inlineHelpText>Please select your Vehicle Car Make for this #TheAudiArmy record.</inlineHelpText>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audi</fullName>
                <default>true</default>
                <label>Audi</label>
            </value>
            <value>
                <fullName>Ariel</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>