force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>This field is for designating #TheAudiArmy Vehicle Car Model.</description>
    <inlineHelpText>Please enter #TheAudiArmy Model for this Vehicle Car Record.</inlineHelpText>
    <label>Model</label>
    <length>69</length>
    <type>Text</type>
</CustomField>