force-app/main/default/objects/Vehicle__c/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <description>This field is for designating #TheAudiArmy Vehicle Car Part Type.</description>
    <inlineHelpText>Please select the Part Type which this #TheAudiArmy Car Part is.</inlineHelpText>
    <label>Part Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Tuning</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Exhaust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>