force-app/main/default/objects/Vehicle__c/fields/Sponsored_Part__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for designating if the part is a sponsored #TheAudiArmy Vehicle Car Part.</description>
    <inlineHelpText>Please Check if this part was even a partial sponsorship.</inlineHelpText>
    <label>Sponsored Part</label>
    <type>Checkbox</type>
</CustomField>