force-app/main/default/objects/Vehicle__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>This field is for designating #TheAudiArmy Vehicle Car Year.</description>
    <inlineHelpText>Please enter the Year for this #TheAudiArmy Car.</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>