force-app/main/default/objects/Vehicle__c/recordTypes/Car.recordType-meta.xml
<RecordType>
    <fullName>Car</fullName>
    <active>true</active>
    <description>Choose this Record Type when creating a Car Vehicle Record for #TheAudiArmy</description>
    <label>Car</label>
</RecordType>