force-app/main/default/objects/Vehicle__c/recordTypes/Car_Part.recordType-meta.xml
<RecordType>
    <fullName>Car_Part</fullName>
    <active>true</active>
    <description>Choose this Record Type when creating a Car Part Vehicle Record for #TheAudiArmy</description>
    <label>Car Part</label>
</RecordType>